--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </form>
         </div>
         <div>
-            <button class="login">Log in</button>
+            <a href="login.html"><button class="login">Log in</button></a>
         </div>
     </header>
     <!--BANNER-->
@@ -41,130 +41,130 @@
         <div>
             <div class="category">
                 <h3>Categoria 1</h3>
-                <a href="">Ver todo <i class="fa fa-arrow-right"></i></a>
+                <a href="productos.html">Ver todo <i class="fa fa-arrow-right"></i></a>
             </div>
             <div class="products">
                 <div class="product">
                     <img src="./assets/img/close.png" alt="">
                     <h4>Product name</h4>
                     <p>$$$$$</p>
-                    <a>Ver producto</a>
+                    <a href="">Ver producto</a>
                 </div>
                 <div class="product">
                     <img src="./assets/img/close.png" alt="">
                     <h4>Product name</h4>
                     <p>$$$$$</p>
-                    <a>Ver producto</a>
+                    <a href="">Ver producto</a>
                 </div>
                 <div class="product">
                     <img src="./assets/img/close.png" alt="">
                     <h4>Product name</h4>
                     <p>$$$$$</p>
-                    <a>Ver producto</a>
+                    <a href="">Ver producto</a>
                 </div>
                 <div class="product">
                     <img src="./assets/img/close.png" alt="">
                     <h4>Product name</h4>
                     <p>$$$$$</p>
-                    <a>Ver producto</a>
+                    <a href="">Ver producto</a>
                 </div>
                 <div class="product">
                     <img src="./assets/img/close.png" alt="">
                     <h4>Product name</h4>
                     <p>$$$$$</p>
-                    <a>Ver producto</a>
+                    <a href="">Ver producto</a>
                 </div>
                 <div class="product">
                     <img src="./assets/img/close.png" alt="">
                     <h4>Product name</h4>
                     <p>$$$$$</p>
-                    <a>Ver producto</a>
+                    <a href="">Ver producto</a>
                 </div>
             </div>
             <div>
                 <div class="category">
                     <h3>Categoria 1</h3>
-                    <a href="">Ver todo <i class="fa fa-arrow-right"></i></a>
+                    <a href="productos.html">Ver todo <i class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class="products">
                     <div class="product">
                         <img src="./assets/img/close.png" alt="">
                         <h4>Product name</h4>
                         <p>$$$$$</p>
-                        <a>Ver producto</a>
+                        <a href="">Ver producto</a>
                     </div>
                     <div class="product">
                         <img src="./assets/img/close.png" alt="">
                         <h4>Product name</h4>
                         <p>$$$$$</p>
-                        <a>Ver producto</a>
+                        <a href="">Ver producto</a>
                     </div>
                     <div class="product">
                         <img src="./assets/img/close.png" alt="">
                         <h4>Product name</h4>
                         <p>$$$$$</p>
-                        <a>Ver producto</a>
+                        <a href="">Ver producto</a>
                     </div>
                     <div class="product">
                         <img src="./assets/img/close.png" alt="">
                         <h4>Product name</h4>
                         <p>$$$$$</p>
-                        <a>Ver producto</a>
+                        <a href="">Ver producto</a>
                     </div>
                     <div class="product">
                         <img src="./assets/img/close.png" alt="">
                         <h4>Product name</h4>
                         <p>$$$$$</p>
-                        <a>Ver producto</a>
+                        <a href="">Ver producto</a>
                     </div>
                     <div class="product">
                         <img src="./assets/img/close.png" alt="">
                         <h4>Product name</h4>
                         <p>$$$$$</p>
-                        <a>Ver producto</a>
+                        <a href="">Ver producto</a>
                     </div>
                 </div>
                 <div>
                     <div class="category">
                         <h3>Categoria 1</h3>
-                        <a href="">Ver todo <i class="fa fa-arrow-right"></i></a>
+                        <a href="productos.html">Ver todo <i class="fa fa-arrow-right"></i></a>
                     </div>
                     <div class="products">
                         <div class="product">
                             <img src="./assets/img/close.png" alt="">
                             <h4>Product name</h4>
                             <p>$$$$$</p>
-                            <a>Ver producto</a>
+                            <a href="">Ver producto</a>
                         </div>
                         <div class="product">
                             <img src="./assets/img/close.png" alt="">
                             <h4>Product name</h4>
                             <p>$$$$$</p>
-                            <a>Ver producto</a>
+                            <a href="">Ver producto</a>
                         </div>
                         <div class="product">
                             <img src="./assets/img/close.png" alt="">
                             <h4>Product name</h4>
                             <p>$$$$$</p>
-                            <a>Ver producto</a>
+                            <a href="">Ver producto</a>
                         </div>
                         <div class="product">
                             <img src="./assets/img/close.png" alt="">
                             <h4>Product name</h4>
                             <p>$$$$$</p>
-                            <a>Ver producto</a>
+                            <a href="">Ver producto</a>
                         </div>
                         <div class="product">
                             <img src="./assets/img/close.png" alt="">
                             <h4>Product name</h4>
                             <p>$$$$$</p>
-                            <a>Ver producto</a>
+                            <a href="">Ver producto</a>
                         </div>
                         <div class="product">
                             <img src="./assets/img/close.png" alt="">
                             <h4>Product name</h4>
                             <p>$$$$$</p>
-                            <a>Ver producto</a>
+                            <a href="">Ver producto</a>
                         </div>
                     </div>
     </section>
@@ -183,8 +183,8 @@
             <form action="" class="about-form">
                 <h3>Contáctanos</h3>
                 <input type="text" title="Nombre" placeholder="Nombre completo">
-                <textarea name="mensaje" id="mensaje" placeholder="Escribe tu mensaje" cols="30" rows="5"></textarea>
-                <button type="submit" class="banner-button">Ver promociones</button>
+                <textarea name="mensaje" title="Mensaje" id="mensaje" placeholder="Escribe tu mensaje" cols="30" rows="5"></textarea>
+                <button type="submit" class="banner-button">Enviar</button>
             </form>
         </div>
     </section>
