--- a/productos.html
+++ b/productos.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="./assets/css/productos.css">
     <link rel="stylesheet" href="./assets/css/about.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
-    <title>Productos</title>
+    <title>Ver más | Productos</title>
 </head>
 
 <body>
     <!--HEADER-->
     <header id="header">
         <div class="header-div">
-            <span id="logo" href="index.html" title="Volver a pagina principal"><a href="index.html"><b>Personal</b>Geek</a></span>
+            <span id="logo" title="Volver a pagina principal"><a href="index.html"><b>Personal</b>Geek</a></span>
             <form id="search" action="">
                 <input type="text" name="search" placeholder="¿Qué deseas buscar?" class="search-input" />
                 <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
@@ -29,7 +29,7 @@
     <section id="content">
         <div class="products-title">
             <h3>Todos los productos</h3>
-            <a href="productos.html">Agregar producto</a>
+            <a href="agregarProducto.html">Agregar producto</a>
         </div>
         <div class="products">
             <div class="product">
