--- a/index.html
+++ b/index.html
@@ -40,130 +40,130 @@
     <section id="content">
         <div>
             <div class="category">
-                <h3>Categoria 1</h3>
+                <h3>Anime</h3>
                 <a href="productos.html">Ver todo <i class="fa fa-arrow-right"></i></a>
             </div>
             <div class="products">
                 <div class="product">
-                    <img src="./assets/img/close.png" alt="">
-                    <h4>Product name</h4>
-                    <p>$$$$$</p>
+                    <img src="./assets/img/pain.jpg" alt="">
+                    <h4>Pain</h4>
+                    <p>$12</p>
                     <a href="">Ver producto</a>
                 </div>
                 <div class="product">
-                    <img src="./assets/img/close.png" alt="">
-                    <h4>Product name</h4>
-                    <p>$$$$$</p>
+                    <img src="./assets/img/kakashi.jpg" alt="">
+                    <h4>Kakashi Hatake</h4>
+                    <p>$7</p>
                     <a href="">Ver producto</a>
                 </div>
                 <div class="product">
-                    <img src="./assets/img/close.png" alt="">
-                    <h4>Product name</h4>
-                    <p>$$$$$</p>
+                    <img src="./assets/img/eren.webp" alt="">
+                    <h4>Eren Jaeger</h4>
+                    <p>$9</p>
                     <a href="">Ver producto</a>
                 </div>
                 <div class="product">
-                    <img src="./assets/img/close.png" alt="">
-                    <h4>Product name</h4>
-                    <p>$$$$$</p>
+                    <img src="./assets/img/kaneki.webp" alt="">
+                    <h4>Ken Kaneki</h4>
+                    <p>$8</p>
                     <a href="">Ver producto</a>
                 </div>
                 <div class="product">
-                    <img src="./assets/img/close.png" alt="">
-                    <h4>Product name</h4>
-                    <p>$$$$$</p>
+                    <img src="./assets/img/dazai.jpg" alt="">
+                    <h4>Dazazi Osamu</h4>
+                    <p>$5</p>
                     <a href="">Ver producto</a>
                 </div>
                 <div class="product">
-                    <img src="./assets/img/close.png" alt="">
-                    <h4>Product name</h4>
-                    <p>$$$$$</p>
+                    <img src="./assets/img/saitamawebp.webp" alt="">
+                    <h4>Saitama</h4>
+                    <p>$7</p>
                     <a href="">Ver producto</a>
                 </div>
             </div>
             <div>
                 <div class="category">
-                    <h3>Categoria 1</h3>
+                    <h3>Anime</h3>
                     <a href="productos.html">Ver todo <i class="fa fa-arrow-right"></i></a>
                 </div>
                 <div class="products">
                     <div class="product">
-                        <img src="./assets/img/close.png" alt="">
-                        <h4>Product name</h4>
-                        <p>$$$$$</p>
+                        <img src="./assets/img/pain.jpg" alt="">
+                        <h4>Pain</h4>
+                        <p>$12</p>
                         <a href="">Ver producto</a>
                     </div>
                     <div class="product">
-                        <img src="./assets/img/close.png" alt="">
-                        <h4>Product name</h4>
-                        <p>$$$$$</p>
+                        <img src="./assets/img/kakashi.jpg" alt="">
+                        <h4>Kakashi Hatake</h4>
+                        <p>$7</p>
                         <a href="">Ver producto</a>
                     </div>
                     <div class="product">
-                        <img src="./assets/img/close.png" alt="">
-                        <h4>Product name</h4>
-                        <p>$$$$$</p>
+                        <img src="./assets/img/eren.webp" alt="">
+                        <h4>Eren Jaeger</h4>
+                        <p>$9</p>
                         <a href="">Ver producto</a>
                     </div>
                     <div class="product">
-                        <img src="./assets/img/close.png" alt="">
-                        <h4>Product name</h4>
-                        <p>$$$$$</p>
+                        <img src="./assets/img/kaneki.webp" alt="">
+                        <h4>Ken Kaneki</h4>
+                        <p>$8</p>
                         <a href="">Ver producto</a>
                     </div>
                     <div class="product">
-                        <img src="./assets/img/close.png" alt="">
-                        <h4>Product name</h4>
-                        <p>$$$$$</p>
+                        <img src="./assets/img/dazai.jpg" alt="">
+                        <h4>Dazazi Osamu</h4>
+                        <p>$5</p>
                         <a href="">Ver producto</a>
                     </div>
                     <div class="product">
-                        <img src="./assets/img/close.png" alt="">
-                        <h4>Product name</h4>
-                        <p>$$$$$</p>
+                        <img src="./assets/img/saitamawebp.webp" alt="">
+                        <h4>Saitama</h4>
+                        <p>$7</p>
                         <a href="">Ver producto</a>
                     </div>
                 </div>
                 <div>
                     <div class="category">
-                        <h3>Categoria 1</h3>
+                        <h3>Anime</h3>
                         <a href="productos.html">Ver todo <i class="fa fa-arrow-right"></i></a>
                     </div>
                     <div class="products">
                         <div class="product">
-                            <img src="./assets/img/close.png" alt="">
-                            <h4>Product name</h4>
-                            <p>$$$$$</p>
+                            <img src="./assets/img/pain.jpg" alt="">
+                            <h4>Pain</h4>
+                            <p>$12</p>
                             <a href="">Ver producto</a>
                         </div>
                         <div class="product">
-                            <img src="./assets/img/close.png" alt="">
-                            <h4>Product name</h4>
-                            <p>$$$$$</p>
+                            <img src="./assets/img/kakashi.jpg" alt="">
+                            <h4>Kakashi Hatake</h4>
+                            <p>$7</p>
                             <a href="">Ver producto</a>
                         </div>
                         <div class="product">
-                            <img src="./assets/img/close.png" alt="">
-                            <h4>Product name</h4>
-                            <p>$$$$$</p>
+                            <img src="./assets/img/eren.webp" alt="">
+                            <h4>Eren Jaeger</h4>
+                            <p>$9</p>
                             <a href="">Ver producto</a>
                         </div>
                         <div class="product">
-                            <img src="./assets/img/close.png" alt="">
-                            <h4>Product name</h4>
-                            <p>$$$$$</p>
+                            <img src="./assets/img/kaneki.webp" alt="">
+                            <h4>Ken Kaneki</h4>
+                            <p>$8</p>
                             <a href="">Ver producto</a>
                         </div>
                         <div class="product">
-                            <img src="./assets/img/close.png" alt="">
-                            <h4>Product name</h4>
-                            <p>$$$$$</p>
+                            <img src="./assets/img/dazai.jpg" alt="">
+                            <h4>Dazazi Osamu</h4>
+                            <p>$5</p>
                             <a href="">Ver producto</a>
                         </div>
                         <div class="product">
-                            <img src="./assets/img/close.png" alt="">
-                            <h4>Product name</h4>
-                            <p>$$$$$</p>
+                            <img src="./assets/img/saitamawebp.webp" alt="">
+                            <h4>Saitama</h4>
+                            <p>$7</p>
                             <a href="">Ver producto</a>
                         </div>
                     </div>
