--- a/agregarProducto.html
+++ b/agregarProducto.html
@@ -29,6 +29,7 @@
     </header>
     <!--AGREGAR-->
     <section id="agregar">
+        <a href="productos.html" class="volver" title="Volver atrás"><i class="fa fa-arrow-left"></i></a>
         <div>
             <form action="" class="agregar-form">
                 <h3>Nuevo producto</h3>
