--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <!--BANNER-->
     <section id="banner">
         <div>
-            <h2 class="banner-h2">Texto Promocional</h2>
-            <p class="banner-p">Aquí aparecerán los descuentos especiales para productos seleccionados</p>
+            <h2 class="banner-h2">Bienvenido</h2>
+            <p class="banner-p">Todos los artículos se actualizan a diario, vuelve mas tarde para mas novedades</p>
             <button class="banner-button">Ver promociones</button>
         </div>
     </section>
@@ -48,125 +48,124 @@
                     <img src="./assets/img/pain.jpg" alt="">
                     <h4>Pain</h4>
                     <p>$12</p>
-                    <a href="">Ver producto</a>
+                    <a href="verProducto.html" target="_blank">Ver producto</a>
                 </div>
                 <div class="product">
                     <img src="./assets/img/kakashi.jpg" alt="">
                     <h4>Kakashi Hatake</h4>
                     <p>$7</p>
-                    <a href="">Ver producto</a>
+                    <a href="verProducto.html" target="_blank">Ver producto</a>
                 </div>
                 <div class="product">
                     <img src="./assets/img/eren.webp" alt="">
                     <h4>Eren Jaeger</h4>
                     <p>$9</p>
-                    <a href="">Ver producto</a>
+                    <a href="verProducto.html" target="_blank">Ver producto</a>
                 </div>
                 <div class="product">
                     <img src="./assets/img/kaneki.webp" alt="">
                     <h4>Ken Kaneki</h4>
                     <p>$8</p>
-                    <a href="">Ver producto</a>
+                    <a href="verProducto.html" target="_blank">Ver producto</a>
                 </div>
                 <div class="product">
                     <img src="./assets/img/dazai.jpg" alt="">
-                    <h4>Dazazi Osamu</h4>
+                    <h4>Dazai Osamu</h4>
                     <p>$5</p>
-                    <a href="">Ver producto</a>
+                    <a href="verProducto.html" target="_blank">Ver producto</a>
                 </div>
                 <div class="product">
                     <img src="./assets/img/saitamawebp.webp" alt="">
                     <h4>Saitama</h4>
                     <p>$7</p>
-                    <a href="">Ver producto</a>
+                    <a href="verProducto.html" target="_blank">Ver producto</a>
                 </div>
             </div>
-            <div>
-                <div class="category">
-                    <h3>Anime</h3>
-                    <a href="productos.html">Ver todo <i class="fa fa-arrow-right"></i></a>
+            <div class="category">
+                <h3>Anime</h3>
+                <a href="productos.html">Ver todo <i class="fa fa-arrow-right"></i></a>
+            </div>
+            <div class="products">
+                <div class="product">
+                    <img src="./assets/img/pain.jpg" alt="">
+                    <h4>Pain</h4>
+                    <p>$12</p>
+                    <a href="verProducto.html" target="_blank">Ver producto</a>
                 </div>
-                <div class="products">
-                    <div class="product">
-                        <img src="./assets/img/pain.jpg" alt="">
-                        <h4>Pain</h4>
-                        <p>$12</p>
-                        <a href="">Ver producto</a>
-                    </div>
-                    <div class="product">
-                        <img src="./assets/img/kakashi.jpg" alt="">
-                        <h4>Kakashi Hatake</h4>
-                        <p>$7</p>
-                        <a href="">Ver producto</a>
-                    </div>
-                    <div class="product">
-                        <img src="./assets/img/eren.webp" alt="">
-                        <h4>Eren Jaeger</h4>
-                        <p>$9</p>
-                        <a href="">Ver producto</a>
-                    </div>
-                    <div class="product">
-                        <img src="./assets/img/kaneki.webp" alt="">
-                        <h4>Ken Kaneki</h4>
-                        <p>$8</p>
-                        <a href="">Ver producto</a>
-                    </div>
-                    <div class="product">
-                        <img src="./assets/img/dazai.jpg" alt="">
-                        <h4>Dazazi Osamu</h4>
-                        <p>$5</p>
-                        <a href="">Ver producto</a>
-                    </div>
-                    <div class="product">
-                        <img src="./assets/img/saitamawebp.webp" alt="">
-                        <h4>Saitama</h4>
-                        <p>$7</p>
-                        <a href="">Ver producto</a>
-                    </div>
+                <div class="product">
+                    <img src="./assets/img/kakashi.jpg" alt="">
+                    <h4>Kakashi Hatake</h4>
+                    <p>$7</p>
+                    <a href="verProducto.html" target="_blank">Ver producto</a>
                 </div>
-                <div>
-                    <div class="category">
-                        <h3>Anime</h3>
-                        <a href="productos.html">Ver todo <i class="fa fa-arrow-right"></i></a>
-                    </div>
-                    <div class="products">
-                        <div class="product">
-                            <img src="./assets/img/pain.jpg" alt="">
-                            <h4>Pain</h4>
-                            <p>$12</p>
-                            <a href="">Ver producto</a>
-                        </div>
-                        <div class="product">
-                            <img src="./assets/img/kakashi.jpg" alt="">
-                            <h4>Kakashi Hatake</h4>
-                            <p>$7</p>
-                            <a href="">Ver producto</a>
-                        </div>
-                        <div class="product">
-                            <img src="./assets/img/eren.webp" alt="">
-                            <h4>Eren Jaeger</h4>
-                            <p>$9</p>
-                            <a href="">Ver producto</a>
-                        </div>
-                        <div class="product">
-                            <img src="./assets/img/kaneki.webp" alt="">
-                            <h4>Ken Kaneki</h4>
-                            <p>$8</p>
-                            <a href="">Ver producto</a>
-                        </div>
-                        <div class="product">
-                            <img src="./assets/img/dazai.jpg" alt="">
-                            <h4>Dazazi Osamu</h4>
-                            <p>$5</p>
-                            <a href="">Ver producto</a>
-                        </div>
-                        <div class="product">
-                            <img src="./assets/img/saitamawebp.webp" alt="">
-                            <h4>Saitama</h4>
-                            <p>$7</p>
-                            <a href="">Ver producto</a>
-                        </div>
-                    </div>
+                <div class="product">
+                    <img src="./assets/img/eren.webp" alt="">
+                    <h4>Eren Jaeger</h4>
+                    <p>$9</p>
+                    <a href="verProducto.html" target="_blank">Ver producto</a>
+                </div>
+                <div class="product">
+                    <img src="./assets/img/kaneki.webp" alt="">
+                    <h4>Ken Kaneki</h4>
+                    <p>$8</p>
+                    <a href="verProducto.html" target="_blank">Ver producto</a>
+                </div>
+                <div class="product">
+                    <img src="./assets/img/dazai.jpg" alt="">
+                    <h4>Dazai Osamu</h4>
+                    <p>$5</p>
+                    <a href="verProducto.html" target="_blank">Ver producto</a>
+                </div>
+                <div class="product">
+                    <img src="./assets/img/saitamawebp.webp" alt="">
+                    <h4>Saitama</h4>
+                    <p>$7</p>
+                    <a href="verProducto.html" target="_blank">Ver producto</a>
+                </div>
+            </div>
+            <div class="category">
+                <h3>Anime</h3>
+                <a href="productos.html">Ver todo <i class="fa fa-arrow-right"></i></a>
+            </div>
+            <div class="products">
+                <div class="product">
+                    <img src="./assets/img/pain.jpg" alt="">
+                    <h4>Pain</h4>
+                    <p>$12</p>
+                    <a href="verProducto.html" target="_blank">Ver producto</a>
+                </div>
+                <div class="product">
+                    <img src="./assets/img/kakashi.jpg" alt="">
+                    <h4>Kakashi Hatake</h4>
+                    <p>$7</p>
+                    <a href="verProducto.html" target="_blank">Ver producto</a>
+                </div>
+                <div class="product">
+                    <img src="./assets/img/eren.webp" alt="">
+                    <h4>Eren Jaeger</h4>
+                    <p>$9</p>
+                    <a href="verProducto.html" target="_blank">Ver producto</a>
+                </div>
+                <div class="product">
+                    <img src="./assets/img/kaneki.webp" alt="">
+                    <h4>Ken Kaneki</h4>
+                    <p>$8</p>
+                    <a href="verProducto.html" target="_blank">Ver producto</a>
+                </div>
+                <div class="product">
+                    <img src="./assets/img/dazai.jpg" alt="">
+                    <h4>Dazai Osamu</h4>
+                    <p>$5</p>
+                    <a href="verProducto.html" target="_blank">Ver producto</a>
+                </div>
+                <div class="product">
+                    <img src="./assets/img/saitamawebp.webp" alt="">
+                    <h4>Saitama</h4>
+                    <p>$7</p>
+                    <a href="verProducto.html" target="_blank">Ver producto</a>
+                </div>
+            </div>
+        </div>
     </section>
     <!--ABOUT AND CONTACT-->
     <section id="about">
