--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div>
             <div class="category">
                 <h3>Anime</h3>
-                <a href="productos.html">Ver todo <i class="fa fa-arrow-right"></i></a>
+                <a href="productos.html" class="a-category">Ver todo <i class="fa fa-arrow-right"></i></a>
             </div>
             <div class="products">
                 <div class="product">
@@ -83,7 +83,7 @@
             </div>
             <div class="category">
                 <h3>Anime</h3>
-                <a href="productos.html">Ver todo <i class="fa fa-arrow-right"></i></a>
+                <a href="productos.html" class="a-category">Ver todo <i class="fa fa-arrow-right"></i></a>
             </div>
             <div class="products">
                 <div class="product">
@@ -125,7 +125,7 @@
             </div>
             <div class="category">
                 <h3>Anime</h3>
-                <a href="productos.html">Ver todo <i class="fa fa-arrow-right"></i></a>
+                <a href="productos.html" class="a-category">Ver todo <i class="fa fa-arrow-right"></i></a>
             </div>
             <div class="products">
                 <div class="product">
