--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
                 <h3>Anime</h3>
                 <a href="productos.html" class="a-category">Ver todo <i class="fa fa-arrow-right"></i></a>
             </div>
-            <div class="products">
-                <div class="product">
+            <div class="products" data-div>
+                <!--<div class="product">
                     <img src="./assets/img/pain.jpg" alt="">
                     <h4>Pain</h4>
                     <p>$12</p>
                     <a href="verProducto.html" target="_blank">Ver producto</a>
+                     <p style="color:#000000d2" class="descripcion">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, cupiditate facere illum molestias eum alias vitae suscipit! Nisi porro reprehenderit dolorum distinctio accusamus! Iusto temporibus sapiente soluta, eligendi ea veniam!</p>
                 </div>
                 <div class="product">
                     <img src="./assets/img/kakashi.jpg" alt="">
@@ -164,8 +165,8 @@
                     <p>$7</p>
                     <a href="verProducto.html" target="_blank">Ver producto</a>
                 </div>
+            </div>-->
             </div>
-        </div>
     </section>
     <!--ABOUT AND CONTACT-->
     <section id="about">
@@ -190,6 +191,7 @@
     <section id="footer">
         <p>Desarrollado por Jeury Pierre Dide<br>2023</p>
     </section>
+    <script src="../service/client-service.js"></script>
 </body>
 
 </html>
