--- a/productos.html
+++ b/productos.html
@@ -31,8 +31,8 @@
             <h3>Todos los productos</h3>
             <a href="agregarProducto.html">Agregar producto</a>
         </div>
-        <div class="products">
-            <div class="product">
+        <div class="products" data-div>
+            <!--<div class="product">
                 <img src="./assets/img/pain.jpg" alt="">
                 <h4>Pain</h4>
                 <p>$12</p>
@@ -67,7 +67,7 @@
                 <h4>Saitama</h4>
                 <p>$7</p>
                 <a href="verProducto.html" target="_blank">Ver producto</a>
-            </div>
+            </div>-->
         </div>
     </section>
     <!--ABOUT AND CONTACT-->
@@ -93,6 +93,7 @@
     <section id="footer">
         <p>Desarrollado por Jeury Pierre Dide<br>2023</p>
     </section>
+    <script src="../service/client-service.js"></script>
 </body>
 
 </html>
