--- a/verProducto.html
+++ b/verProducto.html
@@ -34,21 +34,15 @@
             <div class="description">
                 <h4>Pain</h4>
                 <p>$12</p>
-                <p style="color:#000000d2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, cupiditate facere illum molestias eum alias vitae suscipit! Nisi porro reprehenderit dolorum distinctio accusamus! Iusto temporibus sapiente soluta, eligendi ea veniam!</p>
+                <p style="color:#000000d2" class="tdescripcion">Lorem...</p>
             </div>
         </div>
         <div>
             <div class="category">
                 <h3>Productos similares</h3>
             </div>
-            <div class="products">
-                <div class="product">
-                    <img src="./assets/img/pain.jpg" alt="">
-                    <h4>Pain</h4>
-                    <p>$12</p>
-                    <a href="verProducto.html" target="_blank">Ver producto</a>
-                </div>
-                <div class="product">
+            <div class="products" data-div>
+                <!--<div class="product">
                     <img src="./assets/img/kakashi.jpg" alt="">
                     <h4>Kakashi Hatake</h4>
                     <p>$7</p>
@@ -77,7 +71,7 @@
                     <h4>Saitama</h4>
                     <p>$7</p>
                     <a href="verProducto.html" target="_blank">Ver producto</a>
-                </div>
+                </div>-->
             </div>
         </div>
     </section>
@@ -104,6 +98,7 @@
     <section id="footer">
         <p>Desarrollado por Jeury Pierre Dide<br>2023</p>
     </section>
+    <script src="../service/client-service.js"></script>
 </body>
 
 </html>
