--- a/editarProducto.html
+++ b/editarProducto.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/about.css">
     <link rel="stylesheet" href="./assets/css/footer.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-    <title>Agregar nuevo producto</title>
+    <title>Editar producto</title>
 </head>
 
 <body>
@@ -32,13 +32,13 @@
         <a href="productos.html" class="volver" title="Volver atrás"><i class="fa fa-arrow-left"></i></a>
         <div>
             <form action="" class="agregar-form" data-form>
-                <h3>Nuevo producto</h3>
+                <h3>Editar producto</h3>
                 <input type="text" title="Enlace de la imagen" name="image" id="image" placeholder="Link de la imagen" data-image required>
                 <input type="text" title="Categoría" name="categoria" id="categoria" placeholder="Categoría" data-categoria required>
                 <input type="text" title="Nombre del producto" name="name" id="name" placeholder="Nombre del producto" data-name required>
                 <input type="number" title="Precio del producto" name="price" id="price" placeholder="Precio" data-price required>
                 <textarea name="descripcion" id="description" placeholder="Descripción del producto" cols="30" rows="5" data-description></textarea>
-                <button type="submit" class="banner-button">Agregar producto</button>
+                <button type="submit" class="banner-button">Editar producto</button>
             </form>
         </div>
     </section>
