--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <section id="footer">
         <p>Desarrollado por Jeury Pierre Dide<br>2023</p>
     </section>
-    <script src="../service/client-service.js"></script>
+    <script type="module" src="../controllers/client-controller.js"></script>
 </body>
 
 </html>
